--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/locale",
-  "version": "0.1.3-alpha",
+  "version": "0.1.4",
   "description": "Locales for @qualweb/core evaluation reports.",
   "main": "dist/index.js",
   "files": [
@@ -35,10 +35,10 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
-    "@qualweb/types": "0.7.8-alpha",
+    "@qualweb/types": "0.7.9",
     "@tsconfig/recommended": "^1.0.1",
     "@types/lodash.clonedeep": "^4.5.6",
-    "@types/node": "^16.4.3",
+    "@types/node": "^16.4.5",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "chai": "^4.3.4",
