--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qualweb/locale",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "description": "Locales for @qualweb/core evaluation reports.",
   "main": "dist/index.js",
   "files": [
@@ -35,6 +35,7 @@
   "author": "João Vicente",
   "license": "ISC",
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "@qualweb/types": "0.7.16",
     "@tsconfig/recommended": "^1.0.1",
     "@types/lodash.clonedeep": "^4.5.6",
